--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <td>31-34</td>
         <td>
             黑肥肥（勇士之村木門隱藏地圖）<br>
-            火肥肥(建議去東六比較好打)
+            火肥肥(建議去東六比較好打)<br>
             發條熊（玩具城）
         </td>
     </tr>
@@ -122,7 +122,7 @@
         <td>58-74</td>
         <td>
             石巨人（巨人寺院2）→ 經驗與金錢效益最佳<br>
-            野狼（冰面2）→ 小幅收益<br>
+            雙狼（沒石二的最佳地點）→ 小幅收益<br>
             女神（組隊任務到71）→ 但是你會沒錢，或是被丟掉
             <p>⚠️ 當你看到這還有石巨人就知道 40到74待在寺院2是最輕鬆的。</p>
         </td>
@@ -134,7 +134,7 @@
 <h3>1轉（弓箭手）</h3>
 <p>建議點法如下：</p>
 <ul>
-    <li>斷魂箭 1 → 二連矢 1 → 精準射擊 3 → 百步穿楊 8</li>
+    <li>斷魂箭 1 → 二連箭 1 → 精準射擊 3 → 百步穿楊 8</li>
     <li>二連箭 點滿（20）</li>
     <li>霸王箭 點滿（20）</li>
     <li>回補 精準射擊 → 集中術（視需求先後）</li>
@@ -157,11 +157,20 @@
 <p>主流我是推薦這：</p>
 <p><strong>（主流）</strong></p>
 <ul>
-    <li>疾風步 1 → 四連箭 1</li>
+    <li>四連1→ 疾風1(缺速就點)</li>
     <li>直接點滿烈焰箭（刷 DT 至 87級）</li>
     <li>完成後洗點 → 改點箭雨30 + 致命箭20</li>
-    <li>看你要先點四連還是草人到16</li>
-    <li>鴿子點16弄鳳凰前置</li>
+    <li>看四連30 →草人到16</li>
+    <li>鴿子點15弄鳳凰前置</li>
+</ul>
+<p>如果你想石媽到維京可以看這</p>
+<p><strong>（箭雨流）</strong></p>
+<ul>
+    <li>四連1→ 疾風1(缺速就點)</li>
+    <li>致命5→ 箭雨11→ 致命20→ 箭雨30</li>
+    <li>四連30-烈焰1(拉怪用)</li>
+    <li>草人到16</li>
+    <li>鴿子點15弄鳳凰前置</li>
 </ul>
 
 <h2>裝備選擇與升級建議</h2>
