--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <li><strong>鞋子：</strong>首選綠跳鞋，預算不夠可以衝雪鞋後面好盤人</li>
     <li><strong>手套：</strong>6攻工地手套優先考慮，60等候再換高屬+攻的職業手套</li>
     <li><strong>耳環/眼鏡：</strong>隨意搭配，眼鏡可透過101組隊取得</li>
-    <li><strong>其他：</strong>雪花(可換攻擊藥丸˙)、速度與閃避還有攻擊藥丸，疼痛舒緩劑剩下就是囤水錢</li>
+    <li><strong>其他：</strong>雪花(可換攻擊藥丸)、速度與閃避還有攻擊藥丸，疼痛舒緩劑剩下就是囤水錢</li>
 </ul>
 
 <h3>🔹 LV70以後裝備檢視點（恭喜你完成三轉）</h3>
@@ -209,7 +209,7 @@
     <li><strong>手套：</strong>8AD工地或8AD職業為優先後面盡量找10AD的</li>
     <li><strong>耳環/眼鏡：</strong>隨意搭配，眼鏡一樣，後續看要不要衝耳敏100(60太貴)</li>
     <li><strong>箭矢：</strong>理論上這東西看自己想不想換</li>
-    <li><strong>其他：</strong>雪花(可換攻擊藥丸˙)、速度與閃避還有攻擊藥丸，疼痛舒緩劑後剩下就是鰻魚</li>
+    <li><strong>其他：</strong>雪花(可換攻擊藥丸)、速度與閃避還有攻擊藥丸，疼痛舒緩劑後剩下就是鰻魚</li>
 </ul>
 </body>
 </html>
