--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <li>草人到16</li>
     <li>鴿子點15弄鳳凰前置</li>
 </ul>
-
+<p><strong>後續全點滿等四轉洗點</strong></p>
 <h2>裝備選擇與升級建議</h2>
 <p>在養成過程中，建議以「通用裝備」為主，方便日後替換與汰舊換新。依照等級分段整理如下：</p>
 
