--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
-    <title>《楓之谷Artale》弓箭手/獵人/遊俠 LV1–74 懶人養成攻略</title>
+    <title>《楓之谷Artale》弓箭手/獵人/遊俠 LV1–87後 懶人養成攻略</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -50,9 +50,9 @@
 </head>
 <body>
 
-<h1>《楓之谷Artale》弓箭手/獵人/遊俠 LV1–74 養成攻略</h1>
+<h1>《楓之谷Artale》弓箭手/獵人/遊俠 LV1–87後 養成攻略</h1>
 
-<h3>作者資訊(我個人比較混才76)</h3>
+<h3>作者資訊(我個人比較混才76)更新時間104年6/21</h3>
 <div class="character">
     <img src="331e25b5-2628-427a-aea3-12b501259514.png" alt="角色圖片：藍鳥">
 </div>
@@ -125,6 +125,22 @@
             雙狼（沒石二的最佳地點）→ 小幅收益<br>
             女神（組隊任務到71）→ 但是你會沒錢，或是被丟掉
             <p>⚠️ 當你看到這還有石巨人就知道 40到74待在寺院2是最輕鬆的。</p>
+        </td>
+     </tr>
+    <tr>
+        <td>74-87</td>
+        <td>
+           DT團<br>
+           綠船(多立百烈)<br>
+           石巨人（巨人寺院2）
+        </td>
+    </tr>
+    <tr>
+        <td>87-後(以目前階段)</td>
+        <td>
+           維京(目前最後坐牢的點)<br>
+           PW團<br>
+           石巨人（巨人寺院2）
         </td>
     </tr>
 </table>
