--- a/index.html
+++ b/index.html
@@ -41,10 +41,17 @@
             text-align: center;
             margin-top: 20px;
         }
-        .character img {
-            max-width: 600px;
+       
+        .img1 {
+            width: 500px; 
             border: 1px solid #ccc;
             border-radius: 10px;
+        }
+        .img2 {
+            width: 800px; 
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            margin-top: 10px; 
         }
     </style>
 </head>
@@ -52,9 +59,10 @@
 
 <h1>《楓之谷Artale》弓箭手/獵人/遊俠 LV1–87後 養成攻略</h1>
 
-<h3>作者資訊(我個人比較混才76)更新時間104年6/21</h3>
+<h3>作者資訊(我個人比較混才76)更新時間104年6/22</h3>
 <div class="character">
-    <img src="331e25b5-2628-427a-aea3-12b501259514.png" alt="角色圖片：藍鳥">
+    <img src="331e25b5-2628-427a-aea3-12b501259514.png" alt="角色圖片：藍鳥" class="img1">
+   
 </div>
 
 <div class="note">
@@ -121,8 +129,8 @@
     <tr>
         <td>58-74</td>
         <td>
-            石巨人（巨人寺院2）→ 經驗與金錢效益最佳<br>
-            雙狼（沒石二的最佳地點）→ 小幅收益<br>
+            石巨人（巨人寺院2）
+            雙狼（沒石二的最佳地點
             女神（組隊任務到71）→ 但是你會沒錢，或是被丟掉
             <p>⚠️ 當你看到這還有石巨人就知道 40到74待在寺院2是最輕鬆的。</p>
         </td>
@@ -227,5 +235,51 @@
     <li><strong>箭矢：</strong>理論上這東西看自己想不想換</li>
     <li><strong>其他：</strong>雪花(可換攻擊藥丸)、速度與閃避還有攻擊藥丸，疼痛舒緩劑後剩下就是鰻魚</li>
 </ul>
+<h3> 🔹 以下是關於弓手裝備價格(不定時更新)</h3>
+<ul>
+ <img src="ima00ge.png" alt="角色圖片：獵人" class="img2">
+ <ul>
+    <table>
+    <tr>
+        <th>弓(以等級排序)</th>
+        <th>價格(以目前乾淨的為主)</th>
+    </tr>
+    <tr>
+       <td>50天弓</td>
+        <td>
+            乾淨65AD平均售價60w
+        </td>
+    </tr>
+    <tr>
+        <td>60鳳凰</td>
+        <td>
+            乾淨75AD平均售價80w
+        </td>
+    </tr>
+    <tr>
+        <td>70青神,黃神,赤神</td>
+        <td>
+            乾淨青神80AD平均售價30w<br>
+            乾淨黃神80AD平均售價200w<br>
+            乾淨赤神80AD平均售價35W
+        </td>
+    </tr>
+    <tr>
+        <td>80紅艾倫,黃艾倫,黑艾倫</td>
+        <td>
+            乾淨紅艾倫85AD平均價格80w<br>
+            乾淨黃艾倫85AD平均價格120w<br>
+            乾淨黑艾倫85AD平均價格800w
+        </td>
+    </tr>
+    <tr>
+        <td>90紅梅杜斯</td>
+        <td>
+             乾淨梅杜斯90AD平均價格350雪<br>
+        </td>
+    </tr>
+  </table>
+ </ul>
+
 </body>
 </html>
