--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <td>51-57</td>
         <td>
             石巨人（巨人寺院2）→ 可掉弓/弩攻60%或雪花標(這太夢想了)<br>
-            雙狼（沒石二的最佳地點）→ 掉落敏捷60%卷
+            雙狼（沒石二的最佳地點
         </td>
     </tr>
     <tr>
@@ -192,7 +192,7 @@
 <ul>
     <li>四連1→ 疾風1(缺速就點)</li>
     <li>致命5→ 箭雨11→ 致命20→ 箭雨30</li>
-    <li>四連30-烈焰1(拉怪用)</li>
+    <li>四連30-烈焰1(可以比較早點拉怪用)</li>
     <li>草人到16</li>
     <li>鴿子點15弄鳳凰前置</li>
 </ul>
