--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <td>58-74</td>
         <td>
             石巨人（巨人寺院2）
-            雙狼（沒石二的最佳地點
+            雙狼（沒石二的最佳地點）
             女神（組隊任務到71）→ 但是你會沒錢，或是被丟掉
             <p>⚠️ 當你看到這還有石巨人就知道 40到74待在寺院2是最輕鬆的。</p>
         </td>
