--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
         <td>51-57</td>
         <td>
             石巨人（巨人寺院2）→ 可掉弓/弩攻60%或雪花標(這太夢想了)<br>
-            雙狼（沒石二的最佳地點
+            雙狼（沒石二的最佳地點→ 可掉披敏）
         </td>
     </tr>
     <tr>
         <td>58-74</td>
         <td>
-            石巨人（巨人寺院2）
-            雙狼（沒石二的最佳地點）
+            石巨人（巨人寺院2）<br>
+            雙狼（沒石二的最佳地點）<br>
             女神（組隊任務到71）→ 但是你會沒錢，或是被丟掉
             <p>⚠️ 當你看到這還有石巨人就知道 40到74待在寺院2是最輕鬆的。</p>
         </td>
@@ -218,7 +218,7 @@
     <li><strong>上下衣or套服：</strong>維持簡單即可，撿到什麼穿什麼</li>
     <li><strong>披風：</strong>有錢衝敏沒錢衝力，基本用伊卡的跳披或速後續換鬼怪</li>
     <li><strong>鞋子：</strong>首選綠跳鞋，預算不夠可以衝雪鞋後面好盤人</li>
-    <li><strong>手套：</strong>6攻工地手套優先考慮，60等候再換高屬+攻的職業手套</li>
+    <li><strong>手套：</strong>6攻工地手套優先考慮，60等後再換高屬+攻的職業手套</li>
     <li><strong>耳環/眼鏡：</strong>隨意搭配，眼鏡可透過101組隊取得</li>
     <li><strong>其他：</strong>雪花(可換攻擊藥丸)、速度與閃避還有攻擊藥丸，疼痛舒緩劑剩下就是囤水錢</li>
 </ul>
