--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <tr>
         <td>74-87</td>
         <td>
-           DT團<br>
+           DT團怨靈發條熊<br>
            綠船(多立百烈)<br>
            石巨人（巨人寺院2）
         </td>
@@ -147,7 +147,7 @@
         <td>87-後(以目前階段)</td>
         <td>
            維京(目前最後坐牢的點)<br>
-           PW團<br>
+           PW團幽魂女巫<br>
            石巨人（巨人寺院2）
         </td>
     </tr>
