--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 </ul>
 <h3> 🔹 以下是關於弓手裝備價格(不定時更新)</h3>
 <ul>
- <img src="ima00ge.png" alt="角色圖片：獵人" class="img2">
+ <img src="im0age.png" alt="角色圖片：獵人" class="img2">
  <ul>
     <table>
     <tr>
