--- a/index.html
+++ b/index.html
@@ -124,11 +124,13 @@
         <td>
             石巨人（巨人寺院2）→ 可掉弓/弩攻60%或雪花標(這太夢想了)<br>
             雙狼（沒石二的最佳地點→ 可掉披敏）
+            金勾(55)直接去
         </td>
     </tr>
     <tr>
         <td>58-74</td>
         <td>
+            金勾
             石巨人（巨人寺院2）<br>
             雙狼（沒石二的最佳地點）<br>
             女神（組隊任務到71）→ 但是你會沒錢，或是被丟掉
@@ -138,17 +140,28 @@
     <tr>
         <td>74-87</td>
         <td>
+            金勾
            DT團怨靈發條熊<br>
            綠船(多立百烈)<br>
            石巨人（巨人寺院2）
         </td>
     </tr>
     <tr>
-        <td>87-後(以目前階段)</td>
+        <td>87-後(目前階段)</td>
         <td>
+           金勾
            維京(目前最後坐牢的點)<br>
            PW團幽魂女巫<br>
            石巨人（巨人寺院2）
+        </td>
+    </tr>
+    <tr>
+        <td>100(6/26後)</td>
+        <td>
+           金勾(一個月內刷到死)<br>
+           維京<br>
+           PW團幽魂女巫<br>
+           石巨人
         </td>
     </tr>
 </table>
@@ -178,8 +191,8 @@
 <p>⚠️ <strong>終極之弓請勿點</strong>，點了直接當喜憨兒。</p>
 
 <h3>3轉（遊俠）</h3>
-<p>主流我是推薦這：</p>
-<p><strong>（主流）</strong></p>
+<p>主流我是推薦箭雨打金勾：</p>
+<p><strong>（金勾-1 不要CH#e9Y6C）</strong></p>
 <ul>
     <li>四連1→ 疾風1(缺速就點)</li>
     <li>直接點滿烈焰箭（刷 DT 至 87級）</li>
@@ -187,7 +200,7 @@
     <li>看四連30 →草人到16</li>
     <li>鴿子點15弄鳳凰前置</li>
 </ul>
-<p>如果你想石媽到維京可以看這</p>
+<p>現在開始用這來打金勾</p>
 <p><strong>（箭雨流）</strong></p>
 <ul>
     <li>四連1→ 疾風1(缺速就點)</li>
