--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
 <p>⚠️ <strong>終極之弓請勿點</strong>，點了直接當喜憨兒。</p>
 
 <h3>3轉（遊俠）</h3>
-<p>主流我是推薦箭雨打金勾：</p>
-<p><strong>（金勾-1 不要CH#e9Y6C）</strong></p>
+<p>主流我是推薦箭雨打金勾不要CH#e9Y6C：</p>
+<p><strong>（目前PW跟PT才比較需要）</strong></p>
 <ul>
     <li>四連1→ 疾風1(缺速就點)</li>
     <li>直接點滿烈焰箭（刷 DT 至 87級）</li>
