--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <td>51-57</td>
         <td>
             石巨人（巨人寺院2）→ 可掉弓/弩攻60%或雪花標(這太夢想了)<br>
-            雙狼（沒石二的最佳地點→ 可掉披敏）
+            雙狼（沒石二的最佳地點→ 可掉披敏）<br>
             金勾(55)直接去
         </td>
     </tr>
