--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
 <h3>🔹 LV45以後裝備檢視點（打石巨人前確認）</h3>
 <ul>
-    <li><strong>頭盔：</strong>骷髏頭盔 + 頭敏100%卷衝7張</li>
+    <li><strong>頭盔：</strong>過度等金勾海盜王帽</li>
     <li><strong>武器：</strong>繼續用35+7的火焰弓到50或60等再換弓，然後70換黃神</li>
     <li><strong>上下衣or套服：</strong>維持簡單即可，撿到什麼穿什麼</li>
     <li><strong>披風：</strong>有錢衝敏沒錢衝力，基本用伊卡的跳披或速後續換鬼怪</li>
@@ -238,7 +238,7 @@
 
 <h3>🔹 LV70以後裝備檢視點（恭喜你完成三轉）</h3>
 <ul>
-    <li><strong>頭盔：</strong>+7骷髏頭盔 直接等金勾</li>
+    <li><strong>頭盔：</strong>+7金勾海盜王帽 等炎魔</li>
     <li><strong>武器：</strong>70黃神沒錢就青神，80換96AD以上的艾倫(90的梅杜斯尊爵不凡有夢想可以弄)</li>
     <li><strong>上下衣or套服：</strong>70後找11屬的套服衝60%低於11衝100過度有錢可以上下衣</li>
     <li><strong>披風：</strong>有錢衝敏沒錢衝力，基本用伊卡的跳披或速後續換鬼怪</li>
