--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <tr>
         <td>100(6/26後)</td>
         <td>
-           金勾(一個月內刷到死)<br>
+           金勾(兩周刷到死)<br>
            維京<br>
            PW團幽魂女巫<br>
            石巨人
